# FSOFT2024

./: README.md
TastyApp/: CMakeLists.txt  Group.cpp  Group.h  Profile.cpp  Profile.h  Rating.cpp  Rating.h  Recipes.cpp  Recipes.h  User.cpp  User.h  main.cpp
TastyApp/headers/controllers/: Controller.cpp  Controller.h  GroupController.h  ProfileController.h  RatingController.h  RecipesController.h  UserController.h  UtilsController.h  controller.h
TastyApp/headers/exceptions/: invalidDataException.cpp  invalidDataException.h
TastyApp/headers/model/: App.h  Group.cpp  Group.h  GroupContainer.cpp  GroupContainer.h  Person.h  Profile.h  ProfileContainer.cpp  ProfileContainer.h  Rating.cpp  Rating.h  RatingContainer.cpp  RatingContainer.h  Recipe.h  RecipeContainer.cpp  RecipeContainer.h  RecipePage.cpp  RecipePage.h  Recipes.h  Registration.cpp  Registration.h  User.cpp  User.h  UserContainer.cpp  UserContainer.h  Utils.h
TastyApp/headers/views/: GroupView.h  ProfileView.h  RatingView.h  RecipesView.h  UserView.h  Utils.h  UtilsView.h  View.h
TastyApp/sources/controllers/: Controller.cpp  controller.cpp
TastyApp/sources/exceptions/: invalidDataException.cpp
TastyApp/sources/model/: App.cpp  Group.cpp  GroupContainer.cpp  Person.cpp  Profile.cpp  ProfileContainer.cpp  Rating.cpp  RatingContainer.cpp  Recipe.cpp  RecipeContainer.cpp  RecipePage.cpp  Recipes.cpp  Registration.cpp  User.cpp  UserContainer.cpp  Utils.cpp
TastyApp/sources/views/: GroupView.cpp  ProfileView.cpp  RatingView.cpp  RecipesView.cpp  UserView.cpp  Utils.cpp  View.cpp
